feat(): add the debug logs