@@ -7,8 +7,15 @@
  */
 package io.camunda.zeebe.engine.perf;
 
+import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
+
 import io.camunda.zeebe.engine.perf.TestEngine.TestContext;
+import io.camunda.zeebe.engine.state.message.MessageSubscription;
+import io.camunda.zeebe.engine.util.MockTypedRecord;
+import io.camunda.zeebe.engine.util.Records;
 import io.camunda.zeebe.engine.util.client.ProcessInstanceClient;
+import io.camunda.zeebe.protocol.impl.record.RecordMetadata;
+import io.camunda.zeebe.protocol.impl.record.value.processinstance.ProcessInstanceRecord;
 import io.camunda.zeebe.protocol.record.Record;
 import io.camunda.zeebe.protocol.record.intent.MessageSubscriptionIntent;
 import io.camunda.zeebe.protocol.record.value.MessageSubscriptionRecordValue;
@@ -19,8 +26,10 @@ import io.camunda.zeebe.test.util.jmh.JMHTestCase;
 import io.camunda.zeebe.test.util.junit.JMHTest;
 import io.camunda.zeebe.test.util.record.RecordingExporter;
 import java.io.ByteArrayOutputStream;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.file.Files;
 import java.time.Duration;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
@@ -49,7 +58,12 @@ import org.slf4j.LoggerFactory;
       "-XX:+DebugNonSafepoints",
       "-XX:+AlwaysPreTouch",
       "-XX:+UseShenandoahGC",
-      "-Xlog:gc*=debug:file=gc.log"
+      //      "-XX:+UseZGC",
+      //      "-XX:+ZGenerational",
+      //      "-Xlog:gc*=debug:file=gc.log",
+      //      "-XX:+UnlockCommercialFeatures",
+      //      "-XX:StartFlightRecording=disk=true,maxsize=10g,maxage=24h,filename=./recording.jfr",
+      //      "-XX:FlightRecorderOptions=repository=./diagnostics/,maxchunksize=50m,stackdepth=1024"
     })
 @BenchmarkMode(Mode.Throughput)
 @OutputTimeUnit(TimeUnit.SECONDS)
@@ -64,6 +78,7 @@ public class EngineLargeTimersPerformanceTest {
   private ProcessInstanceClient processInstanceClient;
   private TestEngine.TestContext testContext;
   private TestEngine singlePartitionEngine;
+  private TemporaryFolder temporaryFolder;
 
   @Setup
   public void setup() throws Throwable {
@@ -116,7 +131,7 @@ public class EngineLargeTimersPerformanceTest {
 
   private TestEngine.TestContext createTestContext() throws IOException {
     final var autoCloseableRule = new AutoCloseableRule();
-    final var temporaryFolder = new TemporaryFolder();
+    temporaryFolder = new TemporaryFolder();
     temporaryFolder.create();
     LOG.info("Temporary folder for this run: {}", temporaryFolder.getRoot());
 
@@ -134,8 +149,11 @@ public class EngineLargeTimersPerformanceTest {
   }
 
   @TearDown
-  public void tearDown() {
+  public void tearDown() throws IOException {
     LOG.info("Started {} process instances", count);
+    final File rocksdbLog = new File(temporaryFolder.getRoot(), "stream-1/state/runtime/LOG");
+    final File rocksdbLogDest = new File("ROCKSDBLOG");
+    Files.copy(rocksdbLog.toPath(), rocksdbLogDest.toPath(), REPLACE_EXISTING);
     testContext.autoCloseableRule().after();
   }
 
@@ -159,11 +177,11 @@ public class EngineLargeTimersPerformanceTest {
     return message;
   }
 
-  @JMHTest(value = "measureProcessExecutionTime")
+  @JMHTest(value = "measureProcessExecutionTime", isAdditionalProfilersEnabled = true)
   void shouldProcessWithinExpectedDeviation(final JMHTestCase testCase) {
     // given - an expected ops/s score, as measured in CI
     // when running this test locally, you're likely to have a different score
-    final var referenceScore = 1000;
+    final var referenceScore = 750;
 
     // when
     final var assertResult = testCase.run();
